# dune-mcesfem

./: CMakeLists.txt  Makefile.am  config.h.cmake  configure.ac  dune-mcesfem.pc.in  dune.module
cmake/modules/: CMakeLists.txt  Makefile.am
doc/: Makefile.am
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt  Makefile.am
dune/mcesfem/: CMakeLists.txt  Makefile.am  mcesfem.hh
m4/: CMakeLists.txt  Makefile.am  dune-mcesfem.m4
src/: CMakeLists.txt  Makefile.am  dune-mcesfem.cc
src/data/: CMakeLists.txt  ball.dgf  ball2.dgf  circle.dgf  hemi-sphere.dgf  parameter  sphere2.dgf  spiral-2d.dgf  unitcube-1d.dgf  unitcube-2d.dgf
src/output/: CMakeLists.txt  errorplot.py
src/source/: CMakeLists.txt  deformation.hh  dirichletconstraints.hh  elliptic-coupled.hh  elliptic.hh  femscheme.hh  gridwidth.hh  heat.hh  heatmodel.hh  heatscheme.hh  main.cc  meanscheme.hh  model.hh  poisson.hh  probleminterface.hh  rhs-coupled.hh  rhs.hh  run.py  temporalprobleminterface.hh
